--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "mongodb": "3.1.6"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "bunyan-prettystream": "0.1.3",
     "chai": "4.2.0",
     "dirty-chai": "2.0.1",
     "env-test": "1.0.0",
     "eslint": "5.6.1",
     "eslint-config-walmart": "2.2.1",
+    "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-json": "1.2.1",
     "mocha": "5.2.0",
