--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "boom": "7.2.0",
     "bunyan": "1.8.12",
     "config": "2.0.1",
+    "elasticsearch": "15.1.1",
     "hapi": "17.6.0",
     "joi": "13.7.0",
     "lodash": "4.17.11",
