--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Search for products in Walmart online store",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "setup": "node setup.js",
+    "syncProductData": "node workers/sync-product-data-worker.js",
+    "test": "mocha test/ --recursive"
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,7 @@
   },
   "homepage": "https://github.com/hendrikbeneke/walmart-product-search#readme",
   "dependencies": {
+    "agenda": "2.0.2",
     "bluebird": "3.5.2",
     "boom": "7.2.0",
     "bunyan": "1.8.12",
@@ -30,20 +34,24 @@
     "hapi": "17.6.0",
     "joi": "13.7.0",
     "lodash": "4.17.11",
+    "request": "2.88.0",
+    "request-promise": "4.2.2"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "10.0.1",
     "bunyan-prettystream": "0.1.3",
     "chai": "4.2.0",
     "dirty-chai": "2.0.1",
     "env-test": "1.0.0",
     "eslint": "5.6.1",
     "eslint-config-walmart": "2.2.1",
-    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-json": "1.2.1",
     "mocha": "5.2.0",
     "nock": "10.0.0",
+    "proxyquire": "2.1.0",
+    "sinon": "6.3.5",
     "testdouble": "3.8.1"
   }
 }
