--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -2,30 +2,12 @@ version: "2.1"
 services:
   app:
     build: .
-    command: bash -c "npm run setup && npm start"
-    volumes:
-    - .:/output
-    expose:
-    - "3001"
-    ports:
-    - "3001:3001"
-    environment:
-    - NODE_ENV=docker
-    - MONGODB=mongodb://mongodb:27017/product-search
-    - ES=http://es:9200
-    depends_on:
-      mongodb:
-        condition: service_healthy
-      es:
-        condition: service_healthy
-  worker:
-    build: .
-    command: bash -c "npm run syncProductData"
+    command: npm test
     volumes:
     - .:/output
     environment:
-    - NODE_ENV=docker
-    - MONGODB=mongodb://mongodb:27017/product-search
+    - NODE_ENV=test
+    - MONGODB=mongodb://mongodb:27017/test
     - ES=http://es:9200
     depends_on:
       mongodb:
@@ -41,27 +23,17 @@ services:
     - http.cors.allow-origin=*
     - http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type, Content-Length, Authorization
     - http.cors.allow-credentials=true
-    volumes:
-    - esdata:/usr/share/elasticsearch/data
     ports:
     - "9200:9200"
-    expose:
-    - "9200"
-    - "9300"
     healthcheck:
       test: curl --silent --fail localhost:9200/_cluster/health
       interval: 10s
       retries: 6
   mongodb:
     image: mongo:4
-    expose:
-    - "27017"
     ports:
     - "27017:27017"
     healthcheck:
       test: mongo localhost:27017 --eval "db.version()"
       interval: 10s
       retries: 6
-volumes:
-  esdata:
-    driver: local
